=== HEAD

* Remove the install/uninstall rake tasks (jeremyevans)

* Use INSERT VALUES with multiple rows for Dataset#import and #multi_insert on more databases (jeremyevans)

* Support common table expressions (WITH clause) on SQLite >=3.8.3 (jeremyevans)

=== 4.9.0 (2014-04-01)

* Recognize CHECK constraint violations on newer versions of SQLite (jeremyevans)

* Do not attempt to eager load when calling Dataset#columns in the eager_each plugin (jeremyevans)

* Support :driver option for jdbc adapter, for specifying driver class for cases where getConnection doesn't work (jeremyevans) (#785)

* Massive speedup for PostgreSQL array parser (jeremyevans) (#788)

* Add current_datetime_timestamp extension, for current Time/DateTime instances that are literalized as CURRENT_TIMESTAMP (jeremyevans)

* Recognize additional unique constraint violations on SQLite (jeremyevans) (#782)

* Don't remove column value when validating nested attributes for one_to_* association where association foreign key is the model's primary key (jeremyevans)

* Add Dataset#disable_insert_returning on PostgreSQL for skipping implicit use of RETURNING (jeremyevans)

* Automatically optimize Model.[], .with_pk, and .with_pk! for models with composite keys (jeremyevans)

* Automatically optimize Model.[] when called with a hash (jeremyevans)

* Automatically optimize Model.find, .first, and .first! when called with a single argument (jeremyevans)

* Add Model.finder for creating optimized finder methods using Dataset::PlaceholderLiteralizer (jeremyevans)

* Add Dataset::PlaceholderLiteralizer optimization framework (jeremyevans)

* Add Dataset#with_sql_{each,all,first,single_value,insert,update} optimized methods (jeremyevans)

* Make pg_array extension use correct type when typecasting column values for smallint, oid, real, character, and varchar arrays (jeremyevans)

* Make Database#column_schema_to_ruby_default a public method in the schema_dumper extension (jeremyevans) (#776)
