@@ -166,10 +166,13 @@ module Sequel
     
     module DatasetMethods
       SELECT_CLAUSE_METHODS = Sequel::Dataset.clause_methods(:select, %w'select distinct columns from join where group having compounds order limit')
-      LIMIT = Sequel::Dataset::LIMIT
       COMMA = Sequel::Dataset::COMMA
+      LIMIT = Sequel::Dataset::LIMIT
       BOOL_FALSE = '0'.freeze
       BOOL_TRUE = '1'.freeze
+
+      # Hope you don't have more than 2**32 + offset rows in your dataset
+      ONLY_OFFSET = ",4294967295".freeze
 
       def supports_join_using?
         false
@@ -213,13 +216,22 @@ module Sequel
       # CUBRID requires a limit to use an offset,
       # and requires a FROM table if a limit is used.
       def select_limit_sql(sql)
-        if @opts[:from] && (l = @opts[:limit])
+        return unless @opts[:from]
+        l = @opts[:limit]
+        o = @opts[:offset]
+        if l || o
           sql << LIMIT
-          if o = @opts[:offset]
+          if o
             literal_append(sql, o)
-            sql << COMMA
+            if l
+              sql << COMMA
+              literal_append(sql, l)
+            else
+              sql << ONLY_OFFSET
+            end
+          else
+            literal_append(sql, l)
           end
-          literal_append(sql, l)
         end
       end
     end
